Update template (add bonus task)

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -61,7 +61,7 @@
 
 % Leave as is to ensure anonymous grading.
 \author{
-\IEEEauthorblockN{Michal Spano}
+\IEEEauthorblockN{ANONYMOUS AUTHOR}
 \IEEEauthorblockA{Examination in DIT348 Software Development Methodologies\\
 Department of Computer Science and Engineering\\
 University of Gothenburg\\
@@ -105,7 +105,7 @@ If you did not attend the Scrum Lego workshop, find literature that describes de
 
 \begin{figure*}
 	\centering
-	\includegraphics[width=0.9\textwidth]{assets/placeholder_diagram}
+	\includegraphics[width=0.9\textwidth]{placeholder_diagram}
 	\caption{Placeholder diagram showing your envisioned process}
 	\label{fig:placeholderdiagram}
 \end{figure*}
@@ -144,19 +144,15 @@ Briefly describe at least the key task definitions, role definitions, and work p
 
 This section must be worked on individually.
 
-\section{Bonus Task: Comparison of Process}
+\section{Bonus Task: Scrum of Scrums}
 \label{sec:bonus_task}
 This task needs to be solved to get a 5 (pass with distinction).
 Note that to get a 5, all other tasks need to be at a level that fulfill the criteria for a 4.
 The bonus task cannot be used to pass the exam if you would fail it based on the other tasks.
 It cannot be used to improve a 3 (pass) either.
 
-A new team at an automotive company is looking for a process that it can use to develop a new infotainment feature.
-It wants to use data from a smart watch, so that different information can be shown to the driver depending on their current pulse and health status.
-The team consists of 10 people.
-The team will need to interact with different teams.
-For example, there are dependencies to a team that develops a central vehicle display and a team at the smart watch company that provides an API for the smart watch.
-Briefly describe at least 6 practices or processes that they might consider using, briefly explain their advantages and disadvantages, and give recommendations for how the team should work. Cite relevant references.
+In the workshops, you observed many issues that related to inter-team coordination. One way to address those issues is to have more frequent Scrum of Scrum meetings. Another way to solve them is to have coordination artifacts that create a common understanding between different teams. Find at least three different peer-reviewed sources in the literature that discuss inter-team coordination and/or Scrum of Scrum meetings. Explain at least two challenges that have been reported connected to Scrum of Scrum meetings. Explain and justify whether you would recommend big companies to rely on frequent Scrum of Scrum meetings or whether you think other mechanisms are better for inter-team coordination. 
+
 
 If you decide to submit the bonus task, you get 1/2 page for it. The new page limit will be 6.5 pages.
 \section{Summary and Lessons Learned}
