Draft introduction (report)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -28,3 +28,22 @@
 	issn = {0164-1212},
 	author = {F. Pettersson and M. Ivarsson and T. Gorschek and P. Öhman},
 }
+
+@book{Humphrey1989,
+  title={Managing the software process},
+  author={Humphrey, Watts S},
+  year={1989},
+  publisher={Addison-Wesley Longman Publishing Co., Inc.}
+}
+
+@ARTICLE{Basili1988,
+  author={Basili, V.R. and Rombach, H.D.},
+  journal={IEEE Transactions on Software Engineering}, 
+  title={The TAME project: towards improvement-oriented software environments}, 
+  year={1988},
+  volume={14},
+  number={6},
+  pages={758-773},
+  doi={10.1109/32.6156}
+}
+
