--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -57,7 +57,9 @@
 
 \begin{document}
 
-\title{Title}
+% TODO: examine the feasibility of this title before the submission
+\title{On the Design of Software Processes and Software Process Improvement in
+the Context of Lego Scrum Workshops}
 
 % Leave as is to ensure anonymous grading.
 \author{
@@ -70,23 +72,40 @@ Gothenburg, Sweden}}
 \maketitle
 
 \begin{abstract}
-This document is a template. The various components of your essay (title, headings, etc.) are already defined here. Please note that the headings must NOT change unless explicitly stated below. That is, you MUST use the predefined headings. Make sure to retain font sizes, line spacing, column width, and margins. Not following this template in either structure or layout will lead to a FAIL. Remember: the criteria for attaining the grades are defined in the course syllabus. To get a pass with distinction (5), you need to solve the bonus task (Section~\ref{sec:bonus_task}). Please replace this abstract with your own text, briefly state what this report is about, and summarize the key take-aways.
+% This document is a template. The various components of your essay (title,
+  % headings, etc.) are already defined here. Please note that the headings
+  % must NOT change unless explicitly stated below. That is, you MUST use the
+  % predefined headings. Make sure to retain font sizes, line spacing, column
+  % width, and margins. Not following this template in either structure or
+  % layout will lead to a FAIL. Remember: the criteria for attaining the grades
+  % are defined in the course syllabus. To get a pass with distinction (5), you
+  % need to solve the bonus task (Section~\ref{sec:bonus_task}). Please replace
+  % this abstract with your own text, briefly state what this report is about,
+  % and summarize the key take-aways.
+
+TODO
 \end{abstract}
 
 \section{Introduction}
-This template is a document that provides the predefined outline of your essay. You must use the predefined outline and you must NOT change any headings in the outline unless otherwise noted in the instructions. It is important to note that you have a page limit of \textbf{six pages} for your report, hence it is important to decide how much should be analyzed, discussed, and written for each section.
 
-The introduction section should be used to introduce Software Processes and Software Process Improvement (SPI) in general and to introduce the purpose and context of this report.
-To set the stage, describe in 1--2 sentences what a software process is.
-Afterwards, explain in 1--2 sentences what software process improvement (SPI) is.
+% The introduction section should be used to introduce Software Processes and
+% Software Process Improvement (SPI) in general and to introduce the purpose
+% and context of this report.
 
-The Abstract, Introduction and Summary sections play a smaller part in the assessment. Therefore, most of your effort (and space in the essay) should be put into Sections \ref{sec:process}, \ref{sec:experiences}, \ref{sec:spi-techniques}, \ref{sec:proposal}, \ref{sec:implementation}, and \ref{sec:redesign}.
+A software process refers to the set of tools, methods, and practices used to
+produce a software product. \cite{Humphrey1989}  
+With the increasing complexity of software systems, the need for a well-defined
+software process has become more and more significant.
 
-Please note that it is important that you use peer-reviewed and relevant references when you describe, reflect, and discuss aspects of SPI throughout the entire take-home exam. Whenever referencing a paper, make sure that it is clear why you referenced it and how it contributes to your argument.
+With that in mind, Basili and Rombach \cite{Basili1988} state that the software
+engineering processes require \textbf{tailorability} because of the diversity
+of the software products and the different environments in which they are
+developed, hence the need for a software process improvement (hereafter SPI)
+initiative.
 
-Since some of the work performed in the course is group work, some overlap between members of the same group is expected. You are encouraged to reuse the joint work you did in class in some sections if a corresponding statement is made in that section. However, this is an individual written exam rather than a group exam. Therefore, make sure that different members of the same group do not use the same text. Verbatim copying is not permissible.
-
-This section must be worked on individually.
+This paper analyzes a designed software process and proposes an SPI initiative 
+in the context of the Lego Scrum workshop(s) that took place during the course.
+Ultimately, <TODO> (one sentence; a discussion topic or something like that). 
 
 \section{Process Defined for the Scrum Workshop}
 \label{sec:process}
@@ -164,21 +183,5 @@ This section must be worked on individually.
 % This is used to generate the references section. See mybibfile.bib for the bib sources.
 \bibliographystyle{IEEEtran}
 \bibliography{mybibfile}
-
-
-% If the bib file doesn't work for you, you can also define the references section like this:
-%\begin{thebibliography}{1}
-%	
-%	\bibitem{CaterSteel2006}
-%	A.~Cater-Steel, M.~Toleman, and T.~Rout, ``Process Improvement for Small Firms: An Evaluation of the RAPID Assessment-Based Method''. Information and Software Technology, vol.~48, no.~5, pp.~323- 334, 2006.
-%	
-%	\bibitem{Abrahamsson2002}
-%	P.~Abrahamsson and K.~Kautz, ``Personal Software Process: Classroom Experiences from Finland''. Proc.~Software Quality -- ESCQ '02, pp.~175-85, Springer, 2002.
-%	
-%	\bibitem{Pettersson2008}
-%	F.~Pettersson, M.~Ivarsson, T.~Gorschek, and P.~{\"O}hman, ``A practitioner's guide to light weight software process assessment and improvement planning''. Journal of Systems and Software, 81(6), pp. 972-995, 2008
-%	
-%\end{thebibliography}
 \end{document}
-
 
