Draft task 2 (report)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -47,3 +47,28 @@
   doi={10.1109/32.6156}
 }
 
+@article{Tamrakar2012,
+  title={Does the use of Fibonacci numbers in Planning Poker affect effort estimates?},
+  author={Tamrakar, Ritesh and J{\o}rgensen, Magne},
+  year={2012},
+  publisher={IET}
+}
+
+@inproceedings{Srivastava2017,
+  title={SCRUM model for agile methodology},
+  author={Srivastava, Apoorva and Bhardwaj, Sukriti and Saraswat, Shipra},
+  booktitle={2017 International Conference on Computing, Communication and Automation (ICCCA)},
+  pages={864--869},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{Schwaber1997,
+  title={Scrum development process},
+  author={Schwaber, Ken},
+  booktitle={Business Object Design and Implementation: OOPSLA’95 Workshop Proceedings 16 October 1995, Austin, Texas},
+  pages={117--134},
+  year={1997},
+  organization={Springer}
+}
+ 
