--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -1,4 +1,3 @@
-
 %% report_template.tex
 %% V1.0
 %% 2012-03-16
@@ -93,10 +92,9 @@ TODO
 % and context of this report.
 
 A software process refers to the set of tools, methods, and practices used to
-produce a software product. \cite{Humphrey1989}  
+produce a software product \cite{Humphrey1989}.
 With the increasing complexity of software systems, the need for a well-defined
 software process has become more and more significant.
-
 With that in mind, Basili and Rombach \cite{Basili1988} state that the software
 engineering processes require \textbf{tailorability} because of the diversity
 of the software products and the different environments in which they are
@@ -104,14 +102,66 @@ developed, hence the need for a software process improvement (hereafter SPI)
 initiative.
 
 This paper analyzes a designed software process and proposes an SPI initiative 
-in the context of the Lego Scrum workshop(s) that took place during the course.
-Ultimately, <TODO> (one sentence; a discussion topic or something like that). 
+in the context of the Lego Scrum workshop that took place during the course.
+Ultimately, ... % <TODO> (one sentence; a discussion topic or something like that). 
 
 \section{Process Defined for the Scrum Workshop}
 \label{sec:process}
-Describe the process you defined for the Scrum Lego Workshop. Explain whether you chose to apply Scrum, User Story Practice, and Incremental Delivery. Give reasons for why you did or did not use elements from these three practices.
 
-You can use the results of the first assignment and in-class sessions. While it is okay if members of the same group provide similar answers based on your common process definition, each group member has to formulate this section independently.
+% Describe the process you defined for the Scrum Lego Workshop. Explain whether
+% you chose to apply Scrum, User Story Practice, and Incremental Delivery. Give
+% reasons for why you did or did not use elements from these three practices.
+
+The defined process is titled {\fontfamily{qhv}\selectfont AKAMMO} and primarily
+utilizes concepts from Scrum and Incremental Delivery, and to a lesser extent,
+User Story Practice. Scrum provides a flexible and adaptive approach to project
+management, and encourages transparency in terms of the project's progress and
+the issues encountered. Scrum, by definition, is meant to be applied in an
+iterative manner, which is why a conjunction with Incremental Delivery becomes
+a natural choice \cite{Srivastava2017}, \cite{Schwaber1997}.
+
+Initially, the process assumes a set of user stories that are to be implemented
+(and are prioritized by the Product Owner, hereafter PO). Afterwards, the team
+members analyze the user stories and decide whether they require a further
+elicitation of requirements (which is discussed with the PO) or whether they
+can be implemented as they are.
+Moreover, before each sprint, \textbf{sprint planning} takes place. It is an
+activity that aims to split up the user stories into more granular requirements
+that, once implemented, satisfy the acceptance criteria of a particular user
+story, and, additionally, sprint planning is thought of as a way to delegate
+requirements to the members of the team.
+
+Subsequently, the requirements are assigned \textbf{story points} that
+correspond to the difficulty of their implementation (i.e., the higher
+the number, the more difficult the implementation) based on the Fibonacci
+sequence. Strikingly, Tamrakar and Jørgensen \cite{Tamrakar2012} observe that
+the Fibonacci scale (among other non-linear scales) eliminates the bias that is
+introduced by any linear scale such that humans tend to be biased towards the
+middle of the scale, and thereby non-linear scales yield more accurate results.
+
+Furthermore, a \textbf{Kanban board} is to be used throughout the workshop to
+categorize each user story into one of the following columns: (i) \textit{To
+Do}, (ii) \textit{In Progress}, (iii) \textit{Done}. The process does not
+assume any type of a board; either a physical or a digital board can be used.
+
+What's more, a sprint is to last an hour and at the end of each sprint, a
+meeting takes place which is, put simply, a conjunction of a sprint review and
+a sprint retrospective (adapted from Scrum). Herein, the team members are to
+discuss the difficulties they encountered as well as evaluate the overall
+progress made. Consequently, this meeting results in a definition of an
+\textbf{increment} to the product that is to be delivered to the PO.
+
+The process, by default, does not schedule any breaks; however, there is a
+possibility of a so-called \textit{emergency break} that can be called by any
+team member at most once every 30 minutes on a team-wide basis.
+Breaks on an individual basis are allowed, but shall not interfere with the
+team's progress. In a typical Scrum environment, stand-up meetings are held
+continuously throughout a set period of time. However, in the context of the
+Lego Scrum workshop, the team members are not obliged to hold such meetings,
+since the team merely consists of six members, and the workshop itself is not
+meant to last longer than four hours.
+
+% TODO: can add more text here if the page limit permits.
 
 \section{Experiences in the Scrum Workshop}
 \label{sec:experiences}
