Finish task 3 (report; DIT348)

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -1,3 +1,5 @@
+% ===== Included from the template =====
+
 @article{CaterSteel2006,
 	title={Process improvement for small firms: An evaluation of the {RAPID} assessment-based method},
 	author={Cater-Steel, Aileen and Toleman, Mark and Rout, Terry},
@@ -28,6 +30,8 @@
 	issn = {0164-1212},
 	author = {F. Pettersson and M. Ivarsson and T. Gorschek and P. Öhman},
 }
+
+% ===== Included from the template =====
 
 @book{Humphrey1989,
   title={Managing the software process},
@@ -71,4 +75,25 @@
   year={1997},
   organization={Springer}
 }
- 
+
+@article{Kopczynska2022,
+  title={On the benefits and problems related to using Definition of Done—A survey study},
+  author={Kopczy{\'n}ska, Sylwia and Ochodek, Miros{\l}aw and Piechowiak, Jakub and Nawrocki, Jerzy},
+  journal={Journal of Systems and Software},
+  volume={193},
+  pages={111479},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{Larsson2020,
+  title={Integration, application and importance of collaboration in sustainable project management},
+  author={Larsson, Johan and Larsson, Lisa},
+  journal={Sustainability},
+  volume={12},
+  number={2},
+  pages={585},
+  year={2020},
+  publisher={MDPI}
+}
+
