Finish task 4 (report; DIT348)
Note: review the 2 sections from task 4 before working further on the
report.

--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -97,3 +97,12 @@
   publisher={MDPI}
 }
 
+@inproceedings{Malvius2009,
+  title={Increasing Performance in Complex Product Development Through Structured Information and Cross-Functional Collaboration},
+  author={Malvius, Diana and Ivarsson, Martin and Bergsjo{\"{}}, Dag},
+  booktitle={International Design Engineering Technical Conferences and Computers and Information in Engineering Conference},
+  volume={48999},
+  pages={1043--1050},
+  year={2009}
+}
+
