Refine task 4 (report; DIT348)

--- a/report_template_dit348.tex
+++ b/report_template_dit348.tex
@@ -300,44 +300,42 @@ of different actors. As a result, the concern that was discussed, for instance,
 in Section~\ref{sec:experiences} about the lack of cross-team communication
 would inherently diminish, since the technique induces a need to communicate on
 a wider scale. While the technique appears rather straightforward, it does
-present several concerns. The selection of the roles is a time-consuming
-process and, consequently, might hinder the progress of the project.
-Additionally, biases may influence role selection, and thus the assessment
-findings may provide inaccurate and unreliable outcomes.
+present several concerns. The role selection is a time-consuming process and,
+consequently, might hinder the progress of the project. Additionally, biases
+may influence the role selection, and thus the assessment findings may provide
+inaccurate and unreliable outcomes.
 
-% TODO: check the two sections before working further on the report.
 Furthermore, iFLAP suggests to \textbf{gather data} from the selected roles
-through the use of interviews and questionnaires. This would allow us to obtain
-a more detailed view of the issues that were encountered during the collective
+with the help of interviews and questionnaires. This would allow us to obtain
+a more detailed overview of the issues that were encountered during the collective
 effort. However, similar to the previous technique, the primary limitation of
 this technique is the time that is required to gather the data. Interviews, on
-a general note, do provide valuable insights into the aspects discussed, albeit
+a general note, do provide valuable insights into the issues at hand, albeit
 they tend to be lengthy and time-consuming. Questionnaires, on the other hand,
-are rather straightforward to conduct, but they do not provide as much detail
-as interviews do; furthermore, an analysis of a questionnaire becomes feasible
-with some automated tools or scripts (which is not too difficult to implement).
-Nevertheless, having applied this technique to our process, we could leverage
-the data gathered to enhance the process in the future stages of its maturity;
-for instance, we could identify a new strategy on how DoD is to be formulated
-and communicated effectively, or how to more accurately assign story points to
-the user stories that are to be implemented.
+are relatively easy and quick to conduct, but they do not provide as much
+detail as interviews do. On the contrary, an analysis of a questionnaire
+becomes feasible with the help of automated tools or scripts that can be
+written by any general-purpose programming language (e.g., Python, Julia,
+etc.). Nevertheless, having applied this technique to our process, we could
+leverage the gathered data to enhance the process in the future stages of its
+maturity. For instance, we could identify a new strategy on how a DoD is to be
 
-Ultimately, iFLAP further recommends to identify \textbf{dependencies among
+Ultimately, iFLAP further recommends to identify \textbf{dependencies between
 improvement issues} as well as \textit{"package"} the improvement issues into
 improvement areas \cite{Pettersson2008}, \cite{Malvius2009}. For instance, the
 lack of a DoD is an improvement issue and corresponds to an improvement area of
 \textit{quality assurance}. The identification of such dependencies allows the
-team to tackle the issues in a more efficient manner. Moreover if a certain
+team to tackle the issues in a more efficient manner. That is, if a certain
 dependency is found, then a successful resolution of one issue might result in
 a successful resolution of another issue, or, at least, provide an indication
 of how to resolve the latter issue. This technique, under general
-circumstances, is rather straightforward to implement; however, an extensive
-domain knowledge is required to be able to draw dependencies between the
-improvement areas, and, in a larger-scale project, this becomes
-resource-intensive. Though, in our case, the technique is relevant and feasible
-to implement---it must be, however, assumed that the team members have a
-sufficient understanding of the domain (i.e., Lego bricks and their usage) and,
-as a result, can draw dependencies between the improvement areas.
+circumstances, is not too demanding to realize. However, an extensive domain
+knowledge is required to be able to draw dependencies between the improvement
+issues, and, in a larger-scale project, this becomes resource-intensive
+\cite{Pettersson2008}. Though, in our case, the technique is relevant and
+feasible to implement---it must be, however, assumed that the team members have
+a sufficient understanding of the domain, so that dependencies can be drawn
+between the improvement issues in a sensible manner.
 
 % Relate each of those methods/models/techniques to the problems you
 % encountered and described in Section~\ref{sec:experiences}.
